# STRL

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  cmake_build_project.sh  imgui.ini  line_count.sh  line_count_history.txt  qtile_build_and_run.sh  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
app/src/scripts/: Misc.cpp  Misc.h  Opponent.cpp  Opponent.h  PongBall.cpp
engine/: CMakeLists.txt  strl-config.h.cmake
engine/include/strl/: strl.h
engine/resources/shaders/: default.vert
engine/resources/textures/: LICENSE.txt
engine/src/: STRLEngine.cpp  STRLEngine.h
engine/src/config/: STRLConfig.h
engine/src/core/driver/: STRLDriver.cpp  STRLDriver.h
engine/src/core/event/: STRLEvent.cpp  STRLEvent.h  STRLEventListener.cpp  STRLEventListener.h  STRLEventListenerManager.h  STRLEventManager.h
engine/src/core/manager/: STRLManagedItemBase.cpp  STRLManagerBase.h
engine/src/core/object/: STRLObject.cpp  STRLObject.h  STRLObjectManager.cpp  STRLObjectManager.h
engine/src/core/observer/: STRLSubjectBase.cpp  STRLSubjectBase.h
engine/src/core/scene/: STRLSceneBase.cpp  STRLSceneBase.h  STRLSceneManager.cpp
engine/src/core/scripting/: ISTRLScript.cpp  ISTRLScript.h  STRLNativeScriptHandler.cpp  STRLNativeScriptHandler.h  STRLScriptManager.cpp  STRLScriptManager.h
engine/src/core/scripting/premade/: STRLBasicMovementPhysics2D.h  STRLMoveScript.h  STRLPhysics2DBase.cpp  STRLPhysics2DBase.h  STRLPlayerController.cpp  STRLPlayerController.h
engine/src/object/: STRLObject.cpp  STRLObject.h  STRLObjectManager.cpp  STRLObjectManager.h  STRLObjectRenderData.cpp  STRLObjectRenderData.h
engine/src/physics/box2D/: Box2DContactListener.cpp  Box2DPhysics.cpp  Box2DPhysics.h
engine/src/platform/: IPlatform.cpp  IPlatform.h  PlatformBase.cpp  PlatformBase.h
engine/src/platform/glfw/: GLFWPlatform.cpp  GLFWPlatform.h
engine/src/renderer/: IRenderer.cpp  IRenderer.h  IShader.cpp  IShader.h  ITexture.cpp  ITexture.h  STRLCamera.cpp  STRLCamera.h  STRLCameraManager.h  STRLRenderer.cpp  STRLRenderer.h
engine/src/renderer/opengl/: OpenGLRenderData.cpp  OpenGLRenderData.h  OpenGLRenderDataManager.cpp  OpenGLRenderDataManager.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderManager.cpp  OpenGLShaderManager.h  OpenGLTexture.cpp  OpenGLTexture.h
engine/src/util/algorithm/: RenderConversions.h  Triangulation.cpp  Triangulation.h
engine/src/util/manager/: ISTRLManager.h  STRLManagedItemBase.h  STRLManagerBase.h
engine/src/util/observer/: ISTRLObserver.h  ISTRLSubject.h
engine/src/util/random/: STRLRandom.h
framework/: CMakeLists.txt
framework/include/strl/: strl.h
framework/resources/shaders/: default.frag  default.vert  physics_debug_draw.frag  physics_debug_draw.vert
framework/src/config/: STRLConfig.h
framework/src/core/animation/2D/: STRLAnimation2D.cpp  STRLAnimation2D.h  STRLAnimation2DManager.cpp  STRLAnimation2DManager.h
framework/src/core/driver/: STRLDriver.cpp  STRLDriver.h
framework/src/core/event/: STRLEvent.cpp  STRLEvent.h  STRLEventListenerManager.cpp  STRLEventListenerManager.h  STRLEventManager.cpp
framework/src/core/object/: STRLObject.cpp  STRLObject.h  STRLObjectManager.cpp  STRLObjectManager.h
framework/src/core/scene/: STRLSceneBase.cpp  STRLSceneBase.h  STRLSceneManager.h
framework/src/core/scripting/: STRLNativeScriptHandler.cpp  STRLNativeScriptHandler.h  STRLScriptManager.cpp  STRLScriptManager.h
framework/src/core/scripting/premade/: STRLBasicMovementPhysics2D.cpp  STRLBasicMovementPhysics2D.h  STRLMoveScript.cpp  STRLPhysics2DBase.cpp  STRLPhysics2DBase.h
framework/src/physics/box2D/: Box2DContactListener.cpp  Box2DContactListener.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  Box2DPhysics.cpp  Box2DPhysics.h
framework/src/platform/: IPlatform.h
framework/src/platform/glfw/: GLFWPlatform.cpp  GLFWPlatform.h
framework/src/renderer/: STRLCamera.cpp  STRLCamera.h  STRLCameraManager.cpp
framework/src/renderer/opengl/: OpenGLRenderData.cpp  OpenGLRenderData.h  OpenGLRenderDataManager.cpp  OpenGLRenderDataManager.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderUtils.cpp  OpenGLShaderUtils.h  OpenGLTexture.cpp  OpenGLTexture.h
framework/src/util/algorithm/: RenderConversions.cpp  RenderConversions.h
framework/src/util/manager/: STRLManagedItemBase.cpp  STRLManagerBase.cpp  STRLManagerBase.h
framework/src/util/random/: STRLRandom.cpp
framework/tst/: CMakeLists.txt
framework/tst/src/: main.cpp
framework/tst/src/platform/: GLFWPlatform_tests.cpp
framework/tst/src/renderer/: OpenGLRenderer_tests.cpp
pong/: CMakeLists.txt
pong/resources/shaders/: pong_shader.vert
pong/src/: main.cpp
pong/src/scenes/: Pong.cpp  Pong.h
pong/src/scripts/: Opponent.cpp  Opponent.h  Player.cpp  PongBall.cpp  PongBall.h
shader_sandbox/: CMakeLists.txt
shader_sandbox/resources/shaders/: my_shader.frag
shader_sandbox/src/: main.cpp
shader_sandbox/src/scenes/: ShaderSandboxScene.cpp  ShaderSandboxScene.h
sphere_sandbox/: CMakeLists.txt
sphere_sandbox/resources/shaders/: person.frag  person.vert  selection.vert  unit.frag  unit.geom  unit.vert
sphere_sandbox/src/: main.cpp
sphere_sandbox/src/scenes/: SphereSandboxScene.cpp  SphereSandboxScene.h
sphere_sandbox/src/scripts/: Formation.cpp  Formation.h  Unit.cpp  Unit.h
sphere_sandbox/src/states/: States.cpp  States.h
top_down_shooter/: CMakeLists.txt
top_down_shooter/src/: main.cpp
top_down_shooter/src/data/: Character.cpp  Character.h
top_down_shooter/src/scenes/: GameScene.cpp  GameScene.h
top_down_shooter/src/scripts/: GameEntities.cpp  GameEntities.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
